fix: update grass cursor font size and family for better visibility; enhance mobile version message with additional spacing

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -649,10 +649,11 @@ html::-webkit-scrollbar-thumb:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
-    font-size: 1.8em;
+    font-size: 1.2rem;
     text-align: center;
     color: olive;
     z-index: 1;
+    font-family: "Inclusive Sans", sans serif;
   }
   #grass-cursor {
     position: absolute;
